--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,837 @@
+@article {MR4665628,
+    AUTHOR = {Deo, Shaunak V.},
+     TITLE = {On density of modular points in pseudo-deformation rings},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {21},
+     PAGES = {18443--18499},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {11F80 (11F25 11F33)},
+  MRNUMBER = {4665628},
+       DOI = {10.1093/imrn/rnad037},
+       URL = {https://doi.org/10.1093/imrn/rnad037},
+}
+
+@article {MR4664337,
+    AUTHOR = {Ghate, Eknath and Le, Daniel and Sheth, Mihir},
+     TITLE = {Non-admissible irreducible representations of {$p$}-adic
+              {${\rm GL}_n$} in characteristic {$p$}},
+   JOURNAL = {Represent. Theory},
+  FJOURNAL = {Representation Theory. An Electronic Journal of the American
+              Mathematical Society},
+    VOLUME = {27},
+      YEAR = {2023},
+     PAGES = {1088--1101},
+      ISSN = {1088-4165},
+   MRCLASS = {22E50 (11S37)},
+  MRNUMBER = {4664337},
+       DOI = {10.1090/ert/660},
+       URL = {https://doi.org/10.1090/ert/660},
+}
+
+@article {MR4662994,
+    AUTHOR = {Dey, Hiranya Kishore and Sivasubramanian, Sivaramakrishnan},
+     TITLE = {On the alternating runs polynomial in type {B} and type {D}
+              {C}oxeter groups},
+   JOURNAL = {J. Ramanujan Math. Soc.},
+  FJOURNAL = {Journal of the Ramanujan Mathematical Society},
+    VOLUME = {38},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {215--223},
+      ISSN = {0970-1249,2320-3110},
+   MRCLASS = {05A05 (05A15)},
+  MRNUMBER = {4662994},
+}
+
+@article {MR4662819,
+    AUTHOR = {Maiti, Arun},
+     TITLE = {Some computations in string topology},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {54},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {996--1011},
+      ISSN = {0019-5588,0975-7465},
+   MRCLASS = {55P50 (05B45 16E40)},
+  MRNUMBER = {4662819},
+       DOI = {10.1007/s13226-022-00306-w},
+       URL = {https://doi.org/10.1007/s13226-022-00306-w},
+}
+
+@article {MR4662278,
+    AUTHOR = {Mandal, Arindam and Pingali, Vamsi Pritham and Varolin, Dror},
+     TITLE = {Erratum to ``{N}on-uniformly flat affine algebraic
+              hypersurfaces''},
+   JOURNAL = {Nagoya Math. J.},
+  FJOURNAL = {Nagoya Mathematical Journal},
+    VOLUME = {252},
+      YEAR = {2023},
+     PAGES = {985--989},
+      ISSN = {0027-7630,2152-6842},
+   MRCLASS = {32A36 (32E30 32U05 32W50)},
+  MRNUMBER = {4662278},
+       DOI = {10.1017/nmj.2023.13},
+       URL = {https://doi.org/10.1017/nmj.2023.13},
+}
+
+@article {MR4659578,
+    AUTHOR = {Ayyer, Arvind and Mandelshtam, Olya and Martin, James},
+     TITLE = {The multispecies zero range process and modified {M}acdonald
+              polynomials},
+   JOURNAL = {S\'{e}m. Lothar. Combin.},
+  FJOURNAL = {S\'{e}minaire Lotharingien de Combinatoire},
+    VOLUME = {89B},
+      YEAR = {2023},
+     PAGES = {Art. 70, 12},
+      ISSN = {1286-4889},
+   MRCLASS = {05E05 (05A05 05A10 05A19 33D52)},
+  MRNUMBER = {4659578},
+}
+
+@article {MR4659077,
+    AUTHOR = {Mallick, Arka and Nguyen, Hoai-Minh},
+     TITLE = {The {C}affarelli-{K}ohn-{N}irenberg inequalities for radial
+              functions},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'{e}matique. Acad\'{e}mie des Sciences.
+              Paris},
+    VOLUME = {361},
+      YEAR = {2023},
+     PAGES = {1175--1189},
+      ISSN = {1631-073X,1778-3569},
+   MRCLASS = {26D10 (26B05 35A23)},
+  MRNUMBER = {4659077},
+       DOI = {10.5802/crmath.503},
+       URL = {https://doi.org/10.5802/crmath.503},
+}
+
+@article {MR4658376,
+    AUTHOR = {Sompurkar, Rajas Sandeep},
+     TITLE = {Existence of higher extremal {K}\"{a}hler metrics on a minimal
+              ruled surface},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {189},
+      YEAR = {2023},
+     PAGES = {Paper No. 103345, 39},
+      ISSN = {0007-4497},
+   MRCLASS = {53C55 (32J15 32J27 32Q15 34B30 53C25)},
+  MRNUMBER = {4658376},
+       DOI = {10.1016/j.bulsci.2023.103345},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103345},
+}
+
+@article {MR4655067,
+    AUTHOR = {Bharali, Gautam and Borah, Diganta and Gorai, Sushil},
+     TITLE = {The squeezing function: exact computations, optimal estimates,
+              and a new application},
+   JOURNAL = {J. Geom. Anal.},
+  FJOURNAL = {Journal of Geometric Analysis},
+    VOLUME = {33},
+      YEAR = {2023},
+    NUMBER = {12},
+     PAGES = {Paper No. 383, 25},
+      ISSN = {1050-6926,1559-002X},
+   MRCLASS = {32F27 (32F45 32H35)},
+  MRNUMBER = {4655067},
+       DOI = {10.1007/s12220-023-01439-y},
+       URL = {https://doi.org/10.1007/s12220-023-01439-y},
+}
+
+@article {MR4653795,
+    AUTHOR = {Ayyer, Arvind},
+     TITLE = {A simple symmetric exclusion process driven by an asymmetric
+              tracer particle},
+   JOURNAL = {Ann. Inst. Henri Poincar\'{e} D},
+  FJOURNAL = {Annales de l'Institut Henri Poincar\'{e} D. Combinatorics,
+              Physics and their Interactions},
+    VOLUME = {10},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {687--713},
+      ISSN = {2308-5827,2308-5835},
+   MRCLASS = {82C22 (05A15 05A18 60J27 82C05)},
+  MRNUMBER = {4653795},
+       DOI = {10.4171/aihpd/157},
+       URL = {https://doi.org/10.4171/aihpd/157},
+    ANNOTE = {Publication year given as 2022 on first page},
+}
+
+@article {MR4653698,
+    AUTHOR = {Thangavelu, Sundaram},
+     TITLE = {Segal-{B}argmann transforms and holomorphic {S}obolev spaces
+              of fractional order},
+   JOURNAL = {Rev. Un. Mat. Argentina},
+  FJOURNAL = {Revista de la Uni\'{o}n Matem\'{a}tica Argentina},
+    VOLUME = {66},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {297--310},
+      ISSN = {0041-6932,1669-9637},
+   MRCLASS = {43A85 (22E30 46E35)},
+  MRNUMBER = {4653698},
+}
+
+@article {MR4651651,
+    AUTHOR = {Das, Bata Krishna and Kumar, Poornendu and Sau, Haripada},
+     TITLE = {Determining sets for holomorphic functions on the symmetrized
+              bidisk},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {66},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {984--996},
+      ISSN = {0008-4395,1496-4287},
+   MRCLASS = {32A10 (32A08 32A70 32E30 46E22)},
+  MRNUMBER = {4651651},
+       DOI = {10.4153/s0008439523000103},
+       URL = {https://doi.org/10.4153/s0008439523000103},
+}
+
+@article {MR4651648,
+    AUTHOR = {Tour\'{e}, Cheick and Brits, Rudi and Sebastian, Geethika},
+     TITLE = {A multiplicative {K}owalski-{S}\l odkowski theorem for {$ C^
+              *$}-algebras},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {66},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {951--958},
+      ISSN = {0008-4395,1496-4287},
+   MRCLASS = {46L05 (47A10)},
+  MRNUMBER = {4651648},
+       DOI = {10.4153/s0008439522000662},
+       URL = {https://doi.org/10.4153/s0008439522000662},
+}
+
+@article {MR4651118,
+    AUTHOR = {Gupta, Subhojoy and Su, Weixu},
+     TITLE = {Dominating surface-group representations into {${\rm
+              PSL}_2(\Bbb C)$} in the relative representation variety},
+   JOURNAL = {Manuscripta Math.},
+  FJOURNAL = {Manuscripta Mathematica},
+    VOLUME = {172},
+      YEAR = {2023},
+    NUMBER = {3-4},
+     PAGES = {1169--1186},
+      ISSN = {0025-2611,1432-1785},
+   MRCLASS = {57M50 (30F60)},
+  MRNUMBER = {4651118},
+       DOI = {10.1007/s00229-022-01443-6},
+       URL = {https://doi.org/10.1007/s00229-022-01443-6},
+}
+
+@article {MR4649199,
+    AUTHOR = {Bhunia, Pintu and Jana, Suvendu and Paul, Kallol},
+     TITLE = {Numerical radius inequalities and estimation of zeros of
+              polynomials},
+   JOURNAL = {Georgian Math. J.},
+  FJOURNAL = {Georgian Mathematical Journal},
+    VOLUME = {30},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {671--682},
+      ISSN = {1072-947X,1572-9176},
+   MRCLASS = {47A12 (26C10 30C15 47A30)},
+  MRNUMBER = {4649199},
+       DOI = {10.1515/gmj-2023-2037},
+       URL = {https://doi.org/10.1515/gmj-2023-2037},
+}
+
+@article {MR4645746,
+    AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+              and Putinar, Mihai},
+     TITLE = {Totally positive kernels, {P}\'{o}lya frequency functions, and
+              their transforms},
+   JOURNAL = {J. Anal. Math.},
+  FJOURNAL = {Journal d'Analyse Math\'{e}matique},
+    VOLUME = {150},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {83--158},
+      ISSN = {0021-7670,1565-8538},
+   MRCLASS = {47B49 (15B48 42A82)},
+  MRNUMBER = {4645746},
+       DOI = {10.1007/s11854-022-0259-7},
+       URL = {https://doi.org/10.1007/s11854-022-0259-7},
+}
+
+@article {MR4643437,
+    AUTHOR = {Bhunia, Pintu and Paul, Kallol},
+     TITLE = {Corrigendum to ``{D}evelopment of inequalities and
+              characterization of equality conditions for the numerical
+              radius'' [{L}inear {A}lgebra {A}ppl. 630 (2021) 306--315]},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {679},
+      YEAR = {2023},
+     PAGES = {1--3},
+      ISSN = {0024-3795,1873-1856},
+   MRCLASS = {47A12 (15A60 47A30)},
+  MRNUMBER = {4643437},
+       DOI = {10.1016/j.laa.2023.08.019},
+       URL = {https://doi.org/10.1016/j.laa.2023.08.019},
+}
+
+@article {MR4639949,
+    AUTHOR = {Ghosh, Mainak and Krishna, Amalendu},
+     TITLE = {Bertini theorems revisited},
+   JOURNAL = {J. Lond. Math. Soc. (2)},
+  FJOURNAL = {Journal of the London Mathematical Society. Second Series},
+    VOLUME = {108},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {1163--1192},
+      ISSN = {0024-6107,1469-7750},
+   MRCLASS = {14J17 (14C25 14G15)},
+  MRNUMBER = {4639949},
+}
+
+@article {MR4638713,
+    AUTHOR = {Athreya, Siva and Gupta, Purvi and Yogeshwaran, D.},
+     TITLE = {Volume approximation of strongly {$\Bbb{C}$}-convex domains by
+              random polyhedra},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {432},
+      YEAR = {2023},
+     PAGES = {Paper No. 109243, 62},
+      ISSN = {0001-8708,1090-2082},
+   MRCLASS = {60D05 (32F17 60F05 60G55)},
+  MRNUMBER = {4638713},
+       DOI = {10.1016/j.aim.2023.109243},
+       URL = {https://doi.org/10.1016/j.aim.2023.109243},
+}
+
+@article {MR4637445,
+    AUTHOR = {Bera, Sayani and Pal, Ratna and Verma, Kaushal},
+     TITLE = {On the automorphism group of certain short {$\Bbb{C}^2$}'s},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {17},
+     PAGES = {14515--14546},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {32M05 (32F45 32H50 32U35)},
+  MRNUMBER = {4637445},
+       DOI = {10.1093/imrn/rnac235},
+       URL = {https://doi.org/10.1093/imrn/rnac235},
+}
+
+@article {MR4636198,
+    AUTHOR = {Maurya, Rahul and Sarkar, Jaydeb and Sensarma, Aryaman},
+     TITLE = {Automorphisms and generalized projections on spaces of
+              analytic functions},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {530},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 127698, 21},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {30H50 (47B38)},
+  MRNUMBER = {4636198},
+       DOI = {10.1016/j.jmaa.2023.127698},
+       URL = {https://doi.org/10.1016/j.jmaa.2023.127698},
+}
+
+@article {MR4635402,
+    AUTHOR = {Borah, Diganta and Verma, Kaushal},
+     TITLE = {Narasimhan-{S}imha-type metrics on strongly pseudoconvex
+              domains in {$\Bbb C^n$}},
+   JOURNAL = {Complex Var. Elliptic Equ.},
+  FJOURNAL = {Complex Variables and Elliptic Equations. An International
+              Journal},
+    VOLUME = {68},
+      YEAR = {2023},
+    NUMBER = {9},
+     PAGES = {1626--1652},
+      ISSN = {1747-6933,1747-6941},
+   MRCLASS = {32F45 (32A25 32A36)},
+  MRNUMBER = {4635402},
+       DOI = {10.1080/17476933.2022.2069758},
+       URL = {https://doi.org/10.1080/17476933.2022.2069758},
+}
+
+@article {MR4632111,
+    AUTHOR = {Dey, Hiranya Kishore and Shankar, Umesh and Sivasubramanian,
+              Sivaramakrishnan},
+     TITLE = {{$q$}-enumeration of type {B} and type {D} {E}ulerian
+              polynomials based on parity of descents},
+   JOURNAL = {Enumer. Comb. Appl.},
+  FJOURNAL = {Enumerative Combinatorics and Applications},
+    VOLUME = {4},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {Paper No. S2R3, 24},
+      ISSN = {2710-2335},
+   MRCLASS = {05A15 (05A05 05A19)},
+  MRNUMBER = {4632111},
+       DOI = {10.54550/eca2024v4s1r3},
+       URL = {https://doi.org/10.54550/eca2024v4s1r3},
+}
+
+@article {MR4631065,
+    AUTHOR = {Bagchi, Sayan and Ganguly, Pritam and Sarkar, Jayanta and
+              Thangavelu, Sundaram},
+     TITLE = {An analogue of {I}ngham's theorem on the {H}eisenberg group},
+   JOURNAL = {Math. Ann.},
+  FJOURNAL = {Mathematische Annalen},
+    VOLUME = {387},
+      YEAR = {2023},
+    NUMBER = {1-2},
+     PAGES = {1073--1104},
+      ISSN = {0025-5831,1432-1807},
+   MRCLASS = {43A80 (22E25 26E10 33C45 46E35)},
+  MRNUMBER = {4631065},
+       DOI = {10.1007/s00208-022-02479-5},
+       URL = {https://doi.org/10.1007/s00208-022-02479-5},
+}
+
+@article {MR4630764,
+    AUTHOR = {Bharali, Gautam and Zimmer, Andrew},
+     TITLE = {Unbounded visibility domains, the end compactification, and
+              applications},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {376},
+      YEAR = {2023},
+    NUMBER = {8},
+     PAGES = {5949--5988},
+      ISSN = {0002-9947,1088-6850},
+   MRCLASS = {32Q45 (32A40 32F45 53C22 53C23)},
+  MRNUMBER = {4630764},
+       DOI = {10.1090/tran/8944},
+       URL = {https://doi.org/10.1090/tran/8944},
+}
+
+@article {MR4630745,
+    AUTHOR = {Vishwakarma, Prateek Kumar},
+     TITLE = {Positivity preservers forbidden to operate on diagonal blocks},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {376},
+      YEAR = {2023},
+    NUMBER = {8},
+     PAGES = {5261--5279},
+      ISSN = {0002-9947,1088-6850},
+   MRCLASS = {15B48 (15A24 15A39 15A45 26A48 30B10)},
+  MRNUMBER = {4630745},
+       DOI = {10.1090/tran/8256},
+       URL = {https://doi.org/10.1090/tran/8256},
+}
+
+@article {MR4629510,
+    AUTHOR = {Ghosh, Souvik and Mal, Arpita and Paul, Kallol and Sain,
+              Debmalya},
+     TITLE = {On symmetric points with respect to the numerical radius norm},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {Paper No. 67, 25},
+      ISSN = {2662-2033,1735-8787},
+   MRCLASS = {47A12 (46A32)},
+  MRNUMBER = {4629510},
+       DOI = {10.1007/s43037-023-00290-1},
+       URL = {https://doi.org/10.1007/s43037-023-00290-1},
+}
+
+@article {MR4628746,
+    AUTHOR = {Ganguly, Pritam and Manna, Ramesh and Thangavelu, Sundaram},
+     TITLE = {An extension problem, trace {H}ardy and {H}ardy's inequalities
+              for the {O}rnstein-{U}hlenbeck operator},
+   JOURNAL = {Anal. PDE},
+  FJOURNAL = {Analysis \& PDE},
+    VOLUME = {16},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {1205--1244},
+      ISSN = {2157-5045,1948-206X},
+   MRCLASS = {26D10 (26A33 33C45 35A23 35J15 43A80)},
+  MRNUMBER = {4628746},
+       DOI = {10.2140/apde.2023.16.1205},
+       URL = {https://doi.org/10.2140/apde.2023.16.1205},
+}
+
+@article {MR4627304,
+    AUTHOR = {Bhunia, P. and Garayev, M. T. and Paul, K. and Tapdigoglu, R.},
+     TITLE = {Some new applications of {B}erezin symbols},
+   JOURNAL = {Complex Anal. Oper. Theory},
+  FJOURNAL = {Complex Analysis and Operator Theory},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {Paper No. 96, 15},
+      ISSN = {1661-8254,1661-8262},
+   MRCLASS = {47A63 (47B32)},
+  MRNUMBER = {4627304},
+       DOI = {10.1007/s11785-023-01404-1},
+       URL = {https://doi.org/10.1007/s11785-023-01404-1},
+}
+
+@article {MR4624962,
+    AUTHOR = {Ghosh, Mainak and Krishna, Amalendu},
+     TITLE = {Zero-cycles on normal projective varieties},
+   JOURNAL = {J. Inst. Math. Jussieu},
+  FJOURNAL = {Journal of the Institute of Mathematics of Jussieu. JIMJ.
+              Journal de l'Institut de Math\'{e}matiques de Jussieu},
+    VOLUME = {22},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {2241--2295},
+      ISSN = {1474-7480,1475-3030},
+   MRCLASS = {14C25 (14F42 19E15)},
+  MRNUMBER = {4624962},
+       DOI = {10.1017/S1474748022000032},
+       URL = {https://doi.org/10.1017/S1474748022000032},
+}
+
+@article {MR4624372,
+    AUTHOR = {Ayyer, Arvind and Chhita, Sunil and Johansson, Kurt},
+     TITLE = {G{OE} fluctuations for the maximum of the top path in
+              alternating sign matrices},
+   JOURNAL = {Duke Math. J.},
+  FJOURNAL = {Duke Mathematical Journal},
+    VOLUME = {172},
+      YEAR = {2023},
+    NUMBER = {10},
+     PAGES = {1961--2014},
+      ISSN = {0012-7094,1547-7398},
+   MRCLASS = {60K35 (05B20 82B20 82B23)},
+  MRNUMBER = {4624372},
+       DOI = {10.1215/00127094-2022-0075},
+       URL = {https://doi.org/10.1215/00127094-2022-0075},
+}
+
+@article {MR4623916,
+    AUTHOR = {Choudhury, Projesh Nath and Khare, Apoorva},
+     TITLE = {Distance matrices of a tree: two more invariants, and in a
+              unified framework},
+   JOURNAL = {European J. Combin.},
+  FJOURNAL = {European Journal of Combinatorics},
+    VOLUME = {115},
+      YEAR = {2024},
+     PAGES = {Paper No. 103787, 30},
+      ISSN = {0195-6698,1095-9971},
+   MRCLASS = {05C50 (05C05)},
+  MRNUMBER = {4623916},
+MRREVIEWER = {P\'{e}ter\ E.\ Frenkel},
+       DOI = {10.1016/j.ejc.2023.103787},
+       URL = {https://doi.org/10.1016/j.ejc.2023.103787},
+}
+
+@article {MR4621967,
+    AUTHOR = {Ghosh, Abhishek and Singh, Rajesh K.},
+     TITLE = {Weighted estimates for bilinear fractional integral operator
+              on the {H}eisenberg group},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {187},
+      YEAR = {2023},
+     PAGES = {Paper No. 103310, 22},
+      ISSN = {0007-4497},
+   MRCLASS = {42B20 (26A33 43A85)},
+  MRNUMBER = {4621967},
+       DOI = {10.1016/j.bulsci.2023.103310},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103310},
+}
+
+@article {MR4621848,
+    AUTHOR = {Ayuso de Dios, Blanca and Gudi, Thirupathi and Porwal, Kamana},
+     TITLE = {Pointwise {\it a~posteriori} error analysis of a discontinuous
+              {G}alerkin method for the elliptic obstacle problem},
+   JOURNAL = {IMA J. Numer. Anal.},
+  FJOURNAL = {IMA Journal of Numerical Analysis},
+    VOLUME = {43},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {2377--2412},
+      ISSN = {0272-4979,1464-3642},
+   MRCLASS = {65N30},
+  MRNUMBER = {4621848},
+       DOI = {10.1093/imanum/drac046},
+       URL = {https://doi.org/10.1093/imanum/drac046},
+}
+
+@article {MR4620463,
+    AUTHOR = {Ramamurthy, Balaji and Bapat, Ravindra B. and Goel, Shivani},
+     TITLE = {On resistance matrices of weighted balanced digraphs},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {13},
+     PAGES = {2222--2248},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {05C50},
+  MRNUMBER = {4620463},
+       DOI = {10.1080/03081087.2022.2094866},
+       URL = {https://doi.org/10.1080/03081087.2022.2094866},
+}
+
+@article {MR4619753,
+    AUTHOR = {Bhunia, Pintu and Bhanja, Aniket and Sain, Debmalya and Paul,
+              Kallol},
+     TITLE = {Numerical radius inequalities of operator matrices from a new
+              norm on {$\Cal B(\Cal H)$}},
+   JOURNAL = {Miskolc Math. Notes},
+  FJOURNAL = {Miskolc Mathematical Notes. A Publication of the University of
+              Miskolc},
+    VOLUME = {24},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {653--664},
+      ISSN = {1787-2405,1787-2413},
+   MRCLASS = {47A12 (47A30 47A63)},
+  MRNUMBER = {4619753},
+       DOI = {10.18514/mmn.2023.3934},
+       URL = {https://doi.org/10.18514/mmn.2023.3934},
+}
+
+@article {MR4619458,
+    AUTHOR = {Mandal, Arindam},
+     TITLE = {The {D}emailly systems with the vortex ansatz},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {187},
+      YEAR = {2023},
+     PAGES = {Paper No. 103307, 19},
+      ISSN = {0007-4497},
+   MRCLASS = {32L05 (32Q10)},
+  MRNUMBER = {4619458},
+       DOI = {10.1016/j.bulsci.2023.103307},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103307},
+}
+
+@article {MR4612735,
+    AUTHOR = {Bhunia, Pintu and Paul, Kallol and Sen, Anirban},
+     TITLE = {Numerical radius inequalities of sectorial matrices},
+   JOURNAL = {Ann. Funct. Anal.},
+  FJOURNAL = {Annals of Functional Analysis},
+    VOLUME = {14},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 66, 17},
+      ISSN = {2639-7390,2008-8752},
+   MRCLASS = {47A12 (47A30 47B44)},
+  MRNUMBER = {4612735},
+       DOI = {10.1007/s43034-023-00288-8},
+       URL = {https://doi.org/10.1007/s43034-023-00288-8},
+}
+
+@article {MR4612732,
+    AUTHOR = {Sen, Anirban and Bhunia, Pintu and Paul, Kallol},
+     TITLE = {Davis-{W}ielandt-{B}erezin radius inequalities of reproducing
+              kernel {H}ilbert space operators},
+   JOURNAL = {Afr. Mat.},
+  FJOURNAL = {Afrika Matematika},
+    VOLUME = {34},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 44, 14},
+      ISSN = {1012-9405,2190-7668},
+   MRCLASS = {47A30 (47A12)},
+  MRNUMBER = {4612732},
+       DOI = {10.1007/s13370-023-01089-x},
+       URL = {https://doi.org/10.1007/s13370-023-01089-x},
+}
+
+@article {MR4611103,
+    AUTHOR = {Chattopadhyay, Arup and Das, Soma and Pradhan, Chandan and
+              Sarkar, Srijan},
+     TITLE = {Characterization of {C}-symmetric {T}oeplitz operators for a
+              class of conjugations in {H}ardy spaces},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {12},
+     PAGES = {2026--2048},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {47B35 (47A05 47A15 47B15 47B32)},
+  MRNUMBER = {4611103},
+       DOI = {10.1080/03081087.2022.2092712},
+       URL = {https://doi.org/10.1080/03081087.2022.2092712},
+}
+
+@article {MR4610655,
+    AUTHOR = {Bhowmik, Mithun and Pusti, Sanjoy and Ray, Swagato K.},
+     TITLE = {A theorem of {C}hernoff on quasi-analytic functions for
+              {R}iemannian symmetric spaces},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {13},
+     PAGES = {10942--10963},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {43A85 (22E30 53C35)},
+  MRNUMBER = {4610655},
+       DOI = {10.1093/imrn/rnab143},
+       URL = {https://doi.org/10.1093/imrn/rnab143},
+}
+
+@article {MR4610082,
+    AUTHOR = {Khare, Apoorva and Rajaratnam, Bala},
+     TITLE = {The {K}hinchin-{K}ahane and {L}\'{e}vy inequalities for
+              abelian metric groups, and transfer from normed (abelian
+              semi)groups to {B}anach spaces},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {528},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {Paper No. 127545, 18},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {60E15 (46B09 60B15)},
+  MRNUMBER = {4610082},
+       DOI = {10.1016/j.jmaa.2023.127545},
+       URL = {https://doi.org/10.1016/j.jmaa.2023.127545},
+}
+
+@article {MR4609834,
+    AUTHOR = {Kumar, Manoj and Kumar, N. Shravan},
+     TITLE = {Sobolev spaces on compact groups},
+   JOURNAL = {Forum Math.},
+  FJOURNAL = {Forum Mathematicum},
+    VOLUME = {35},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {901--911},
+      ISSN = {0933-7741,1435-5337},
+   MRCLASS = {46E35 (22C05 43A30 43A77)},
+  MRNUMBER = {4609834},
+       DOI = {10.1515/forum-2022-0076},
+       URL = {https://doi.org/10.1515/forum-2022-0076},
+}
+
+@article {MR4609402,
+    AUTHOR = {Bhunia, P. and G\"{u}rdal, M. and Paul, K. and Sen, A. and
+              Tapdigoglu, R.},
+     TITLE = {On a new norm on the space of reproducing kernel {H}ilbert
+              space operators and {B}erezin radius inequalities},
+   JOURNAL = {Numer. Funct. Anal. Optim.},
+  FJOURNAL = {Numerical Functional Analysis and Optimization. An
+              International Journal},
+    VOLUME = {44},
+      YEAR = {2023},
+    NUMBER = {9},
+     PAGES = {970--986},
+      ISSN = {0163-0563,1532-2467},
+   MRCLASS = {47A30 (15A60 47A12 47A63)},
+  MRNUMBER = {4609402},
+       DOI = {10.1080/01630563.2023.2221857},
+       URL = {https://doi.org/10.1080/01630563.2023.2221857},
+}
+
+@article {MR4602839,
+    AUTHOR = {Khare, Apoorva and Sahi, Siddhartha},
+     TITLE = {Corrigendum to ``{F}rom {C}auchy's determinant formula to
+              bosonic and fermionic immanant identities'' [{E}ur. {J}.
+              {C}omb. 110 (2023) 103683]},
+   JOURNAL = {European J. Combin.},
+  FJOURNAL = {European Journal of Combinatorics},
+    VOLUME = {112},
+      YEAR = {2023},
+     PAGES = {Paper No. 103743, 2},
+      ISSN = {0195-6698,1095-9971},
+   MRCLASS = {15A15 (05E05)},
+  MRNUMBER = {4602839},
+       DOI = {10.1016/j.ejc.2023.103743},
+       URL = {https://doi.org/10.1016/j.ejc.2023.103743},
+}
+
+@article {MR4601636,
+    AUTHOR = {Bhowmik, Mithun and Pusti, Sanjoy and Ray, Swagato K.},
+     TITLE = {Correction to: {A} theorem of {C}hernoff on quasi-analytic
+              functions for {R}iemannian symmetric spaces},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2023},
+    NUMBER = {12},
+     PAGES = {10798},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {43A85 (22E30 53C35)},
+  MRNUMBER = {4601636},
+       DOI = {10.1093/imrn/rnac166},
+       URL = {https://doi.org/10.1093/imrn/rnac166},
+}
+
+@article {MR4601148,
+    AUTHOR = {Arya, Vedansh and Kumar, Dharmendra},
+     TITLE = {Carleman estimates for sub-{L}aplacians on {C}arnot groups},
+   JOURNAL = {Anal. Math. Phys.},
+  FJOURNAL = {Analysis and Mathematical Physics},
+    VOLUME = {13},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {Paper No. 55, 17},
+      ISSN = {1664-2368,1664-235X},
+   MRCLASS = {35H20 (35A23 35B60)},
+  MRNUMBER = {4601148},
+       DOI = {10.1007/s13324-023-00818-6},
+       URL = {https://doi.org/10.1007/s13324-023-00818-6},
+}
+
+@article {MR4599592,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {The {D}emailly system for a direct sum of ample line bundles
+              on {R}iemann surfaces},
+   JOURNAL = {Calc. Var. Partial Differential Equations},
+  FJOURNAL = {Calculus of Variations and Partial Differential Equations},
+    VOLUME = {62},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {Paper No. 172, 11},
+      ISSN = {0944-2669,1432-0835},
+   MRCLASS = {53C07 (35J60)},
+  MRNUMBER = {4599592},
+       DOI = {10.1007/s00526-023-02517-3},
+       URL = {https://doi.org/10.1007/s00526-023-02517-3},
+}
+
+@article {MR4598542,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {An extension of the {B}eauville-{L}aszlo descent theorem},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {120},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {595--604},
+      ISSN = {0003-889X,1420-8938},
+   MRCLASS = {13C60 (13B35)},
+  MRNUMBER = {4598542},
+       DOI = {10.1007/s00013-023-01854-1},
+       URL = {https://doi.org/10.1007/s00013-023-01854-1},
+}
+
+@article {MR4598447,
+    AUTHOR = {Dey, Hiranya Kishore and Sivasubramanian, Sivaramakrishnan},
+     TITLE = {Signed alternating descent enumeration in classical {W}eyl
+              groups},
+   JOURNAL = {Discrete Math.},
+  FJOURNAL = {Discrete Mathematics},
+    VOLUME = {346},
+      YEAR = {2023},
+    NUMBER = {10},
+     PAGES = {Paper No. 113540, 13},
+      ISSN = {0012-365X,1872-681X},
+   MRCLASS = {05E16 (20B30)},
+  MRNUMBER = {4598447},
+MRREVIEWER = {Nik\ Lygeros},
+       DOI = {10.1016/j.disc.2023.113540},
+       URL = {https://doi.org/10.1016/j.disc.2023.113540},
+}
+
 @article {MR4595191,
     AUTHOR = {Nandakumaran, A.K. and Sufian, Abu and Thazhathethil, Renjith},
      TITLE = {Homogenization of elliptic {PDE} with {$L^1$} source term in
@@ -14,6 +848,76 @@
        DOI = {10.3233/asy-221808},
        URL = {https://doi.org/10.3233/asy-221808},
 }
+@article {MR4592266,
+    AUTHOR = {Bhattacharyya, Tirthankar and Jindal, Abhay},
+     TITLE = {Complete {N}evanlinna-{P}ick kernels and the characteristic
+              function},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {426},
+      YEAR = {2023},
+     PAGES = {Paper No. 109089, 25},
+      ISSN = {0001-8708,1090-2082},
+   MRCLASS = {47A45 (46E22 47A13)},
+  MRNUMBER = {4592266},
+MRREVIEWER = {Amit\ Maji},
+       DOI = {10.1016/j.aim.2023.109089},
+       URL = {https://doi.org/10.1016/j.aim.2023.109089},
+}
+
+@article {MR4591936,
+    AUTHOR = {Bharali, Gautam},
+     TITLE = {A new family of holomorphic homogeneous regular domains and
+              some questions on the squeezing function},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {34},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {Paper No. 2350020, 34},
+      ISSN = {0129-167X,1793-6519},
+   MRCLASS = {32T25 (32A19 32F18 32F45)},
+  MRNUMBER = {4591936},
+MRREVIEWER = {Feng\ Rong},
+       DOI = {10.1142/S0129167X23500209},
+       URL = {https://doi.org/10.1142/S0129167X23500209},
+}
+
+@article {MR4591851,
+    AUTHOR = {Ganguly, Pritam and Thangavelu, Sundaram},
+     TITLE = {Analogues of theorems of {C}hernoff and {I}ngham on the
+              {H}eisenberg group},
+   JOURNAL = {J. Anal. Math.},
+  FJOURNAL = {Journal d'Analyse Math\'{e}matique},
+    VOLUME = {149},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {281--305},
+      ISSN = {0021-7670,1565-8538},
+   MRCLASS = {43A80 (22E25 43A85)},
+  MRNUMBER = {4591851},
+MRREVIEWER = {Silvina\ Mabel\ Campos},
+       DOI = {10.1007/s11854-022-0252-1},
+       URL = {https://doi.org/10.1007/s11854-022-0252-1},
+}
+
+@article {MR4585867,
+    AUTHOR = {Ghosh, Gargi and Hazra, Somnath},
+     TITLE = {On analytic structure of weighted shifts on generalized
+              directed semi-trees},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {9},
+     PAGES = {1545--1564},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {47B37 (05C20 05C63 47B38)},
+  MRNUMBER = {4585867},
+       DOI = {10.1080/03081087.2022.2065233},
+       URL = {https://doi.org/10.1080/03081087.2022.2065233},
+}
+
 @article {MR4578009,
     AUTHOR = {Roy, Saikat and Sain, Debmalya},
      TITLE = {Approximate orthogonality in complex normed spaces: a
