--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1903,7 +1903,22 @@ MRREVIEWER = {Ravindra\ B.\ Bapat},
 
 }
 
-@article {MR4512511,
+@article {MR4513146,
+    AUTHOR = {Dasgupta, Samit and Kakde, Mahesh},
+     TITLE = {On the {B}rumer-{S}tark conjecture},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {197},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {289--388},
+      ISSN = {0003-486X,1939-8980},
+   MRCLASS = {11R29 (11F41 11R42)},
+  MRNUMBER = {4513146},
+MRREVIEWER = {Andreas\ Nickel},
+       DOI = {10.4007/annals.2023.197.1.5},
+       URL = {https://doi.org/10.4007/annals.2023.197.1.5},
+}@article {MR4512511,
     AUTHOR = {Banerjee, Abhishek},
      TITLE = {Galois coverings of enriched categories and an extension of
               {C}ohen-{M}ontgomery theorem},
