--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,17 @@
+@article {MR4676918,
+AUTHOR = {Khare, Apoorva},
+TITLE = {Polymath 14: groups with norms},
+JOURNAL = {Math. Student},
+FJOURNAL = {The Mathematics Student},
+VOLUME = {92},
+YEAR = {2023},
+NUMBER = {1-2},
+PAGES = {127--136},
+ISSN = {0025-5742},
+MRCLASS = {20-02 (01 20F12 20F65)},
+MRNUMBER = {4676918},
+}
+
 @article {MR4665628,
     AUTHOR = {Deo, Shaunak V.},
      TITLE = {On density of modular points in pseudo-deformation rings},
@@ -139,6 +153,23 @@
   MRNUMBER = {4655067},
        DOI = {10.1007/s12220-023-01439-y},
        URL = {https://doi.org/10.1007/s12220-023-01439-y},
+}
+
+@article {MR4654146,
+AUTHOR = {Khare, Apoorva and Tikaradze, Akaki},
+TITLE = {Recovering affine linearity of functions from their
+restrictions to affine lines},
+JOURNAL = {J. Algebraic Combin.},
+FJOURNAL = {Journal of Algebraic Combinatorics. An International Journal},
+VOLUME = {58},
+YEAR = {2023},
+NUMBER = {3},
+PAGES = {761--773},
+ISSN = {0925-9899,1572-9192},
+MRCLASS = {15A03 (13C10)},
+MRNUMBER = {4654146},
+DOI = {10.1007/s10801-023-01233-7},
+URL = {https://doi.org/10.1007/s10801-023-01233-7},
 }
 
 @article {MR4653795,
@@ -2186,7 +2217,24 @@ MRREVIEWER = {Ali\ Reza\ Moghaddamfar},
 
 }
 
-@article {MR4500373,
+@article {MR4500511,
+AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+and Putinar, Mihai},
+TITLE = {Matrix compression along isogenic blocks},
+JOURNAL = {Acta Sci. Math. (Szeged)},
+FJOURNAL = {Acta Universitatis Szegediensis. Acta Scientiarum
+Mathematicarum},
+VOLUME = {88},
+YEAR = {2022},
+NUMBER = {1-2},
+PAGES = {417--448},
+ISSN = {0001-6969,2064-8316},
+MRCLASS = {65F55 (14M15 15A86 47A60 65F45)},
+MRNUMBER = {4500511},
+MRREVIEWER = {Salman\ Ahmadi-Asl},
+DOI = {10.1007/s44146-022-00023-0},
+URL = {https://doi.org/10.1007/s44146-022-00023-0},
+}@article {MR4500373,
 
     AUTHOR = {Thangavelu, Sundaram},
 
@@ -3649,6 +3697,24 @@ MRREVIEWER = {Harold\ P.\ Boas},
        URL = {https://doi.org/10.1016/j.ejc.2022.103511},
 }
 		
+@article {MR4378092,
+AUTHOR = {Khare, Apoorva},
+TITLE = {Smooth entrywise positivity preservers, a {H}orn-{L}oewner
+master theorem, and symmetric function identities},
+JOURNAL = {Trans. Amer. Math. Soc.},
+FJOURNAL = {Transactions of the American Mathematical Society},
+VOLUME = {375},
+YEAR = {2022},
+NUMBER = {3},
+PAGES = {2217--2236},
+ISSN = {0002-9947,1088-6850},
+MRCLASS = {15B48 (05E05 15A24 15A45 26C05 26D10)},
+MRNUMBER = {4378092},
+MRREVIEWER = {Gorazd\ Le\v{s}njak},
+DOI = {10.1090/tran/8563},
+URL = {https://doi.org/10.1090/tran/8563},
+}
+
 @article {MR4375520,
     AUTHOR = {Khare, Apoorva and Tikaradze, Akaki},
      TITLE = {Covering modules by proper submodules},
