--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -12,6 +12,39 @@ MRCLASS = {20-02 (01 20F12 20F65)},
 MRNUMBER = {4676918},
 }
 
+@article {MR4667178,
+    AUTHOR = {Mal, Arpita},
+     TITLE = {On joint numerical radius of operators and joint numerical
+              index of a {B}anach space},
+   JOURNAL = {Oper. Matrices},
+  FJOURNAL = {Operators and Matrices},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {839--856},
+      ISSN = {1846-3886,1848-9974},
+   MRCLASS = {47A12 (46B20 47L05)},
+  MRNUMBER = {4667178},
+       DOI = {10.7153/oam-2023-17-56},
+       URL = {https://doi.org/10.7153/oam-2023-17-56},
+}
+
+@article {MR4667172,
+    AUTHOR = {Bhunia, Pintu and Paul, Kallol and Barik, Somdatta},
+     TITLE = {Further refinements of {D}avis-{W}ielandt radius inequalities},
+   JOURNAL = {Oper. Matrices},
+  FJOURNAL = {Operators and Matrices},
+    VOLUME = {17},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {767--778},
+      ISSN = {1846-3886,1848-9974},
+   MRCLASS = {47A12 (15A60 47A30 47A50)},
+  MRNUMBER = {4667172},
+       DOI = {10.7153/oam-2023-17-50},
+       URL = {https://doi.org/10.7153/oam-2023-17-50},
+}
+
 @article {MR4665628,
     AUTHOR = {Deo, Shaunak V.},
      TITLE = {On density of modular points in pseudo-deformation rings},
