--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -292,6 +292,21 @@ URL = {https://doi.org/10.1007/s10801-023-01233-7},
        URL = {https://doi.org/10.1007/s00229-022-01443-6},
 }
 
+@article {MR4650655,
+    AUTHOR = {Ghosh, Gargi and Narayanan, E. K.},
+     TITLE = {Toeplitz operators on the weighted {B}ergman spaces of
+              quotient domains},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {188},
+      YEAR = {2023},
+     PAGES = {Paper No. 103340, 29},
+      ISSN = {0007-4497},
+   MRCLASS = {47B35 (30H20 47B32)},
+  MRNUMBER = {4650655},
+       DOI = {10.1016/j.bulsci.2023.103340},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103340},
+}
 @article {MR4649199,
     AUTHOR = {Bhunia, Pintu and Jana, Suvendu and Paul, Kallol},
      TITLE = {Numerical radius inequalities and estimation of zeros of
