--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -2676,6 +2676,24 @@ MRREVIEWER = {Harold\ P.\ Boas},
        URL = {https://doi.org/10.1016/j.jpaa.2022.107233},
 }
 		
+@article {MR4474840,
+AUTHOR = {Mallick, Arka and Nguyen, Hoai-Minh},
+TITLE = {Gagliardo-{N}irenberg and {C}affarelli-{K}ohn-{N}irenberg
+interpolation inequalities associated with {C}oulomb-{S}obolev
+spaces},
+JOURNAL = {J. Funct. Anal.},
+FJOURNAL = {Journal of Functional Analysis},
+VOLUME = {283},
+YEAR = {2022},
+NUMBER = {10},
+PAGES = {Paper No. 109662, 33},
+ISSN = {0022-1236,1096-0783},
+MRCLASS = {26D10 (46E35)},
+MRNUMBER = {4474840},
+MRREVIEWER = {Tom\'{a}\v{s}\ Garrigue\ Roskovec},
+DOI = {10.1016/j.jfa.2022.109662},
+URL = {https://doi.org/10.1016/j.jfa.2022.109662},
+}
 @article {MR4474780,
     AUTHOR = {Banerjee, Abhishek and Kour, Surjeet},
      TITLE = {On measurings of algebras over operads and homology theories},
