ICME page - http to https

--- a/_posts/2023-12-26-nbhm-icme2024.md
+++ b/_posts/2023-12-26-nbhm-icme2024.md
@@ -2,4 +2,4 @@
 title: NBHM ICME 2024
 date: July. 07, 2024
 ---
-[Application for NBHM travel grant for attending ICME 2024](http://www.math.iisc.ac.in/icme15/)
+[Application for NBHM travel grant for attending ICME 2024](https://www.math.iisc.ac.in/icme15/)
