Colloquium Venue Changed to LH-1

--- a/_seminars/2024/2024-02-08-p-sivaram.md
+++ b/_seminars/2024/2024-02-08-p-sivaram.md
@@ -2,7 +2,7 @@
 speaker: P. Sivaram (IISc Mathematics)
 date: 08 Feb 2024
 time: 3:30 pm
-venue: Hybrid - Microsoft Teams (online) and LH-3, Mathematics Department
+venue: Hybrid - Microsoft Teams (online) and <del>LH-3</del> LH-1, Mathematics Department
 title: On existence and regularity of some complex Hessian equations on Kahler and transverse Kahler manifolds
 series: Thesis
 series-prefix: PhD
